fixed up text overflow in plot

--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -106,18 +106,21 @@
         font-weight: 600;
         text-transform: uppercase;
         padding-bottom: 0.8rem;
+        color: #c1c1b5;
+        letter-spacing: 1px;
     }
 
     p {
         font-size: 1.4rem;
         line-height: 1.8;
         font-weight: 400;
-        color: var(--color-light-2);
+        color: #263239;
         
     }
 
     &__title {
-        font-size: 4rem;
+        font-size: 3.2rem;
+        color: #263239;
     }
 
 }
